# ogl-pdl-annotations

./: LICENSE  README.md  pyproject.toml
data/dictionaries/lexicon-thucydideum/: sample.html
data/token-annotations/ggm0001/ggm001/: ggm0001.ggm001.1st1K-grc1.tsv
data/token-annotations/ogl0001/ogl001/: ogl0001.ogl001.1st1K-grc1.tsv
data/token-annotations/stoa0033a/tlg028/: stoa0033a.tlg028.1st1K-grc1.tsv
data/token-annotations/stoa0033a/tlg043/: stoa0033a.tlg043.1st1K-grc1.tsv
data/token-annotations/stoa0121/stoa001/: stoa0121.stoa001.opp-grc1.tsv
data/token-annotations/stoa0146d/stoa001/: stoa0146d.stoa001.opp-grc1.tsv
data/token-annotations/tlg0001/tlg001/: tlg0001.tlg001.perseus-grc2.tsv
data/token-annotations/tlg0005/tlg003/: tlg0005.tlg003.1st1K-grc1.tsv
data/token-annotations/tlg0006/tlg001/: tlg0006.tlg001.perseus-grc2.tsv
data/token-annotations/tlg0006/tlg002/: tlg0006.tlg002.perseus-grc2.tsv
data/token-annotations/tlg0006/tlg003/: tlg0006.tlg003.perseus-grc2.tsv
data/token-annotations/tlg0006/tlg004/: tlg0006.tlg004.perseus-grc2.tsv
data/token-annotations/tlg0006/tlg005/: tlg0006.tlg005.perseus-grc2.tsv
data/token-annotations/tlg0006/tlg006/: tlg0006.tlg006.perseus-grc2.tsv
data/token-annotations/tlg0006/tlg007/: tlg0006.tlg007.perseus-grc2.tsv
data/token-annotations/tlg0006/tlg008/: tlg0006.tlg008.perseus-grc2.tsv
data/token-annotations/tlg0006/tlg009/: tlg0006.tlg009.perseus-grc2.tsv
data/token-annotations/tlg0006/tlg010/: tlg0006.tlg010.perseus-grc2.tsv
pipelines/syntax_trees/: ud.py
scripts/: analyze.py
(+1543 files in other folders)
